--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     },
     "require": {
         "php": ">=5.6",
-        "mnapoli/php-di": "5.0.x-dev@dev",
+        "php-di/php-di": "^5.4",
         "nikic/fast-route": "~0.5.0",
         "twig/twig": "^1.18",
         "mnapoli/silly": "^1.1"
