--- a/cx.config.json
+++ b/cx.config.json
@@ -4,6 +4,7 @@
   },
   "additionalProperties" : {
     "cxFlow": {
+      "bug-tracker": "Json"
       "jira": {
         "project": "CPT"
       }
