--- a/cx.config.json
+++ b/cx.config.json
@@ -4,7 +4,7 @@
   },
   "additionalProperties" : {
     "cxFlow": {
-      "bug-tracker": "Json"
+      "bug-tracker": "Json",
       "jira": {
         "project": "CPT"
       }
